objects/Survey_Response__c.object
<CustomObject>
    <description>Captures customer satisfaction survey responses from service cases</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>In order to help improve our service, please provide any additional comments on the positive or negative aspects of you service experience with Imagine Communications.</description>
        <inlineHelpText>In order to help improve our service, please provide any additional comments on the positive or negative aspects of you service experience with Imagine Communications.</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager_Email__c</fullName>
        <label>Case Owner Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Callback__c</fullName>
        <description>Please tell us your satisfaction regarding your service experience with Imagine Communications: Amount of Time for Initial Callback or Response

0 = Not satisfied
10 = Very Satisfied</description>
        <inlineHelpText>Please tell us your satisfaction regarding your service experience with Imagine Communications: Amount of Time for Initial Callback or Response

0 = Not satisfied
10 = Very Satisfied</inlineHelpText>
        <label>Initial Callback</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Closed__c</fullName>
        <description>Do you agree that your issue is closed?</description>
        <inlineHelpText>Do you agree that your issue is closed?</inlineHelpText>
        <label>Issue Closed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Knowledge_of_Imagine_Rep__c</fullName>
        <description>Please tell us your satisfaction regarding your service experience with Imagine Communications: Knowledge and Expertise of Service Representative

0 = Not satisfied
10 = Very Satisfied</description>
        <inlineHelpText>Please tell us your satisfaction regarding your service experience with Imagine Communications: Knowledge and Expertise of Service Representative

0 = Not satisfied
10 = Very Satisfied</inlineHelpText>
        <label>Knowledge of Imagine Rep</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_closed_explanation__c</fullName>
        <description>If you would like to explain why you don&apos;t feel the issue is resolved, please do that here.</description>
        <inlineHelpText>If you would like to explain why you don&apos;t feel the issue is resolved, please do that here.</inlineHelpText>
        <label>Not closed explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Service_Quality__c</fullName>
        <description>Please tell us your satisfaction regarding your service experience with Imagine Communications: Overall Quality of Service

0 = Not satisfied
10 = Very Satisfied</description>
        <inlineHelpText>Please tell us your satisfaction regarding your service experience with Imagine Communications: Overall Quality of Service

0 = Not satisfied
10 = Very Satisfied</inlineHelpText>
        <label>Overall Service Quality</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professionalism_and_Courtesy__c</fullName>
        <description>Please tell us your satisfaction regarding your service experience with Imagine Communications: Professionalism and Courtesy of Service Representative

0 = Not satisfied
10 = Very Satisfied</description>
        <inlineHelpText>Please tell us your satisfaction regarding your service experience with Imagine Communications: Professionalism and Courtesy of Service Representative

0 = Not satisfied
10 = Very Satisfied</inlineHelpText>
        <label>Professionalism and Courtesy</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommendation_Likelihood__c</fullName>
        <description>Please tell us your satisfaction regarding your service experience with Imagine Communications: Likelihood to Recommend Imagine Communications to Others

0 = Not satisfied
10 = Very Satisfied</description>
        <inlineHelpText>Please tell us your satisfaction regarding your service experience with Imagine Communications: Likelihood to Recommend Imagine Communications to Others

0 = Not satisfied
10 = Very Satisfied</inlineHelpText>
        <label>Recommendation Likelihood</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Responder_Email__c</fullName>
        <label>Responder Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responder_Name__c</fullName>
        <label>Responder Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Completion_Date_Time__c</fullName>
        <description>This field indicates the date and time at which the customer completed and submitted the survey</description>
        <inlineHelpText>This field indicates the date and time at which the customer completed and submitted the survey</inlineHelpText>
        <label>Survey Completion Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_response__c</fullName>
        <description>This is the link to the particular case survey.</description>
        <label>Survey response</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Time_Resolution_Satisfaction__c</fullName>
        <description>Please tell us your satisfaction regarding your service experience with Imagine Communications: Speed In Resolving Issue

0 = Not satisfied
10 = Very Satisfied</description>
        <inlineHelpText>Please tell us your satisfaction regarding your service experience with Imagine Communications: Speed In Resolving Issue

0 = Not satisfied
10 = Very Satisfied</inlineHelpText>
        <label>Time Resolution Satisfaction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timely_Updates_Provided__c</fullName>
        <description>Please tell us your satisfaction regarding your service experience with Imagine Communications: Timely Updates Provided Throughout the Case

0 = Not satisfied
10 = Very Satisfied</description>
        <inlineHelpText>Please tell us your satisfaction regarding your service experience with Imagine Communications: Timely Updates Provided Throughout the Case

0 = Not satisfied
10 = Very Satisfied</inlineHelpText>
        <label>Timely Updates Provided</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{0}</displayFormat>
        <label>Survey Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>